# Telecord

./: .gitignore  LICENSE
astral_script_dev/: deno.json  main.ts
telecordx/: Cargo.toml
telecordx/src/: main.rs
telecordx/src/discord_bot/: commands_handler.rs  mod.rs
telecordx/src/discord_bot/commands/: mod.rs  ping.rs
