[package]
name = "telecordx"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
deno_core = "0.303.0"
deno_runtime = "0.173.0"
